--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@
 
   --color-brown-400: #71451c;
   --color-brown-600: #4A2C2A;
+  --color-brown-100: #DFD9C9;
 
   --animate-fade-in-left: fadeInLeft 0.8s ease-out forwards;
   --animate-fade-in-up: fadeInUp 0.8s ease-out forwards;
