全螢幕背景

--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,26 @@
     font-size: 1.5rem;
   }
 }
+
+
+.page-background {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background-image: url("@/assets/images/Backgound_N.png");
+  background-size: cover;
+  background-position: center;
+}
+
+
+.content-scroller {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow-y: auto;
+  z-index: 1;
+  /* Ensure content is above clouds */
+}
