--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,11 @@
 @theme {
   --font-huninn: 'jf-openhuninn', 'sans-serif';
 
+  --color-brown-100: #DFD9C9;
   --color-brown-400: #71451c;
   --color-brown-600: #4A2C2A;
-  --color-brown-100: #DFD9C9;
+  --color-gold-400: #CA9404;
+  --color-milktea-500: #CBB696;
 
   --animate-fade-in-left: fadeInLeft 0.8s ease-out forwards;
   --animate-fade-in-up: fadeInUp 0.8s ease-out forwards;
@@ -63,7 +65,6 @@
   background-position: center;
 }
 
-
 .content-scroller {
   position: absolute;
   top: 0;
@@ -73,4 +74,46 @@
   overflow-y: auto;
   z-index: 1;
   /* Ensure content is above clouds */
+}
+
+
+
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(245, 245, 220, 0.9);
+  /* 使用與主題相符的米色背景 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loading-text {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #5d4037;
+  /* 使用與主題相符的棕色文字 */
+  display: flex;
+}
+
+.loading-text span {
+  animation: float 1.5s ease-in-out infinite;
+  animation-delay: calc(var(--i) * 0.1s);
+}
+
+@keyframes float {
+
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-15px);
+  }
 }
