--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -4,3 +4,24 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'YRDZST';
+    src: url('./fonts/I.Ngaan-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'PenCrane';
+    src: url('./fonts/I.PenCrane-B-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'HanWangWeBe';
+    src: url('./fonts/HanWangWeBe-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
