--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,18 @@
   }
 }
 
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 @theme {
   --font-huninn: 'jf-openhuninn', 'sans-serif';
 
@@ -41,6 +53,7 @@
 
   --animate-fade-in-left: fadeInLeft 0.8s ease-out forwards;
   --animate-fade-in-up: fadeInUp 0.8s ease-out forwards;
+  --animate-fade-in-down: fadeInDown 0.8s ease-out forwards;
 }
 
 
