--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -1,16 +1,16 @@
-@font-face {
+/* @font-face {
     font-family: 'jf-openhuninn';
     src: url('./fonts/jf-openhuninn-2.1.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-}
+} */
 
-@font-face {
+/* @font-face {
     font-family: 'YRDZST';
     src: url('./fonts/I.Ngaan-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-}
+} */
 
 @font-face {
     font-family: 'PenCrane';
@@ -19,9 +19,9 @@
     font-style: normal;
 }
 
-@font-face {
+/* @font-face {
     font-family: 'HanWangWeBe';
     src: url('./fonts/HanWangWeBe-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-}
+} */
