--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -14,9 +14,11 @@
 
 @font-face {
     font-family: 'PenCrane';
+    /* src: url('./fonts/I.PenCrane-B-Regular.woff2') format('woff2'); */
     src: url('./fonts/I.PenCrane-B-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 /* @font-face {
