--- a/src/index.css
+++ b/src/index.css
@@ -59,8 +59,14 @@
 
 body {
   /* font-family: 'YRDZST', sans-serif; */
-  font-family: 'PenCrane', sans-serif;
+  /* font-family: 'PenCrane', sans-serif; */
+  font-family: "Potta One", system-ui;
+  font-weight: 400;
+  font-style: normal;
   font-size: 1.6rem;
+  letter-spacing: 0.05em; /* 增加字距，視覺上變細 */
+  /* color: transparent; */
+  /* -webkit-text-stroke: 0.1px #000; */
 }
 
 .back-home-btn .icon {
