--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,8 @@
   --color-gold-400: #CA9404;
   --color-milktea-500: #CBB696;
 
+  --color-lightblue: #B5D4D3;
+
   --text-xl: 1.5rem;
   --text-2xl: 1.75rem;
   --text-3xl: 2.25rem;
