--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,8 @@
   --text-4xl: 2.5rem;
   --text-5xl: 3.3rem;
 
+  --breakpoint-2xl: 99rem;
+
   --animate-fade-in-left: fadeInLeft 0.8s ease-out forwards;
   --animate-fade-in-up: fadeInUp 0.8s ease-out forwards;
   --animate-fade-in-down: fadeInDown 0.8s ease-out forwards;
